src/test/ui/specialization/min_specialization/specialize_on_static.stderr
error: cannot specialize on `'static` lifetime
  --> $DIR/specialize_on_static.rs:13:1
   |
LL | / impl X for &'static u8 {
LL | |
LL | |     fn f() {}
LL | | }
   | |_^

error: aborting due to previous error

